[gd_scene load_steps=17 format=3 uid="uid://djgtaewrhqfsp"]

[ext_resource type="Script" path="res://Scripts/battle.gd" id="1_4lqdi"]
[ext_resource type="Resource" uid="uid://b7uoad3u4lon4" path="res://Resources/Pokemon/Moosigo.tres" id="3_7hfpx"]
[ext_resource type="Texture2D" uid="uid://bx52rwlwtv1sh" path="res://Assets/haxorus.png" id="3_dddu2"]
[ext_resource type="Texture2D" uid="uid://dfljhpteoarfu" path="res://Assets/background4.png" id="3_v1vqk"]
[ext_resource type="Texture2D" uid="uid://dry2488vj04hy" path="res://Assets/krookodile.png" id="4_hahno"]
[ext_resource type="Texture2D" uid="uid://b2vjcj78i3swx" path="res://Assets/hud.png" id="6_mdhps"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3fwri"]
bg_color = Color(0.92549, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c431m"]
bg_color = Color(0, 0.8, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5taav"]
bg_color = Color(0.92549, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vi1ml"]
bg_color = Color(0, 0.8, 0, 1)

[sub_resource type="Animation" id="Animation_qol6p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AllyContainer/Ally:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_niebw"]
resource_name = "enemy_healed"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 1, 0, 1), Color(1, 1, 1, 1), Color(0, 1, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1ipou"]
resource_name = "enemy_damaged"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1), Color(1, 1, 1, 1), Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_h88mh"]
resource_name = "ally_healed"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AllyContainer/Ally:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 1, 0, 1), Color(1, 1, 1, 1), Color(0, 1, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_2eo2i"]
resource_name = "player_damaged"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AllyContainer/Ally:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5nhnm"]
_data = {
"RESET": SubResource("Animation_qol6p"),
"enemy_healed": SubResource("Animation_niebw"),
"enemy_hurt": SubResource("Animation_1ipou"),
"player_healed": SubResource("Animation_h88mh"),
"player_hurt": SubResource("Animation_2eo2i")
}

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4lqdi")
enemy = ExtResource("3_7hfpx")
ally = ExtResource("3_7hfpx")

[node name="Background" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background2" type="TextureRect" parent="Background"]
texture_filter = 1
layout_mode = 0
offset_top = 1.0
offset_right = 1152.0
offset_bottom = 649.0
texture = ExtResource("3_v1vqk")
expand_mode = 1

[node name="EnemyHud" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HudBackground" type="TextureRect" parent="EnemyHud"]
layout_mode = 2
offset_left = -1.0
offset_top = 1.0
offset_right = 398.0
offset_bottom = 134.0
texture = ExtResource("6_mdhps")

[node name="EnemyHealth" type="ProgressBar" parent="EnemyHud"]
layout_mode = 2
offset_left = 73.0
offset_top = 80.0
offset_right = 343.0
offset_bottom = 100.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_styles/background = SubResource("StyleBoxFlat_3fwri")
theme_override_styles/fill = SubResource("StyleBoxFlat_c431m")
max_value = 1000.0
value = 50.0

[node name="Name" type="Label" parent="EnemyHud"]
layout_mode = 0
offset_left = 46.0
offset_top = 28.0
offset_right = 158.0
offset_bottom = 56.0
text = "[NAME] "

[node name="Level" type="Label" parent="EnemyHud"]
layout_mode = 0
offset_left = 45.0
offset_top = 53.0
offset_right = 237.0
offset_bottom = 76.0
text = "lvl: [level]"

[node name="AllyHud" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 754.0
offset_top = 400.0
offset_right = 794.0
offset_bottom = 440.0

[node name="HudBackground" type="TextureRect" parent="AllyHud"]
layout_mode = 2
offset_left = -1.0
offset_right = 398.0
offset_bottom = 133.0
texture = ExtResource("6_mdhps")

[node name="AllyHealth" type="ProgressBar" parent="AllyHud"]
texture_filter = 1
custom_minimum_size = Vector2(60, 4)
layout_mode = 2
offset_left = 77.0
offset_top = 76.0
offset_right = 347.0
offset_bottom = 96.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_styles/background = SubResource("StyleBoxFlat_5taav")
theme_override_styles/fill = SubResource("StyleBoxFlat_vi1ml")
max_value = 1000.0
value = 50.0

[node name="Name" type="Label" parent="AllyHud"]
layout_mode = 0
offset_left = 45.0
offset_top = 27.0
offset_right = 157.0
offset_bottom = 55.0
text = "[NAME] "

[node name="Level" type="Label" parent="AllyHud"]
layout_mode = 0
offset_left = 44.0
offset_top = 52.0
offset_right = 236.0
offset_bottom = 75.0
text = "lvl: [level]"

[node name="EnemyContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 766.0
offset_top = 135.0
offset_right = 862.0
offset_bottom = 266.0
scale = Vector2(2, 2)
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Enemy" type="TextureRect" parent="EnemyContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_dddu2")
stretch_mode = 2

[node name="AllyContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_left = 153.0
offset_top = 151.0
offset_right = 253.0
offset_bottom = 282.0
scale = Vector2(4, 4)

[node name="Ally" type="TextureRect" parent="AllyContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("4_hahno")

[node name="ActionPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = -17.0
offset_top = 535.0
offset_right = 1166.0
offset_bottom = 656.0

[node name="Actions" type="HBoxContainer" parent="ActionPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -15.5
offset_right = 106.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Attack" type="Button" parent="ActionPanel/Actions"]
layout_mode = 2
text = "Attack
"

[node name="Item" type="Button" parent="ActionPanel/Actions"]
layout_mode = 2
text = "Item
"

[node name="Switch" type="Button" parent="ActionPanel/Actions"]
layout_mode = 2
text = "Switch
"

[node name="Run" type="Button" parent="ActionPanel/Actions"]
layout_mode = 2
text = "Run"

[node name="MovePanel" type="Panel" parent="."]
layout_mode = 0
offset_left = -11.0
offset_top = 534.0
offset_right = 1161.0
offset_bottom = 651.0

[node name="Actions" type="HBoxContainer" parent="MovePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -15.5
offset_right = 106.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Move 1" type="Button" parent="MovePanel/Actions"]
layout_mode = 2
text = "Move 1"

[node name="Move 2" type="Button" parent="MovePanel/Actions"]
layout_mode = 2
text = "Move 2"

[node name="Move 3" type="Button" parent="MovePanel/Actions"]
layout_mode = 2
text = "Move 3"

[node name="Move 4" type="Button" parent="MovePanel/Actions"]
layout_mode = 2
text = "Move 4"

[node name="Textbox" type="Panel" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = 533.0
offset_right = 1163.0
offset_bottom = 655.0

[node name="Label" type="Label" parent="Textbox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.5
offset_top = -11.5
offset_right = 120.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 15
text = "A wild HAXORUS has appeared!"

[node name="Ticker" type="Label" parent="Textbox"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -252.0
offset_top = -45.0
offset_right = -11.0
offset_bottom = -3.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = ">"
horizontal_alignment = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5nhnm")
}

[connection signal="pressed" from="ActionPanel/Actions/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="ActionPanel/Actions/Run" to="." method="_on_run_pressed"]
[connection signal="pressed" from="MovePanel/Actions/Move 1" to="." method="_on_move_1_pressed"]
[connection signal="pressed" from="MovePanel/Actions/Move 2" to="." method="_on_move_2_pressed"]
[connection signal="pressed" from="MovePanel/Actions/Move 3" to="." method="_on_move_3_pressed"]
[connection signal="pressed" from="MovePanel/Actions/Move 4" to="." method="_on_move_4_pressed"]
[connection signal="gui_input" from="Textbox" to="." method="_on_textbox_gui_input"]
